Your commit message

--- a/_posts/2024-12-26-b2025.md
+++ b/_posts/2024-12-26-b2025.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "B2002 Hello,World!"
+title: "B2025 输出字符菱形"
 author: "ZJM"
 categories: code
 tags: [Code]
-image: code-cover-1.jpg
+image: code-cover-2.jpg
 ---
-```
+```cpp
 #include<bits/stdc++.h>
 #define For(k,i,j) for(int k=i;k<=j;k++)
 using namespace std;
@@ -22,7 +22,11 @@ inline int read()
 }
 int main()
 {
-    cout<<"Hello,World!";
+    cout<<"  *  "<<endl;
+    cout<<" ***  "<<endl;
+    cout<<"*****"<<endl;
+    cout<<" *** "<<endl;
+    cout<<"  *  "<<endl;
     return 0;
 }
 ```
