Your commit message

--- a/_posts/2024-12-26-b2002_副本9.md
+++ b/_posts/2024-12-26-b2002_副本9.md
@@ -4,7 +4,7 @@ title: "B2002 Hello,World!"
 author: "ZJM"
 categories: code
 tags: [Code]
-image: code-cover-1.jpg
+image: code-cover-1.png
 ---
 ```cpp
 #include<bits/stdc++.h>
