Your commit message

--- a/_posts/2024-12-26-b2005.md
+++ b/_posts/2024-12-26-b2005.md
@@ -6,7 +6,7 @@ categories:
   - code
   - sequential-structure
 tags: [Code]
-image: code-cover-1.jpg
+image: code-cover-1.png
 ---
 ```cpp
 #include<bits/stdc++.h>
