--- a/_posts/2024-12-26-b2025.md
+++ b/_posts/2024-12-26-b2025.md
@@ -4,7 +4,7 @@ title: "B2025 输出字符菱形"
 author: "ZJM"
 categories: code
 tags: [Code]
-image: code-cover-2.jpg
+image: code-cover-2.png
 ---
 ```cpp
 #include<bits/stdc++.h>
