--- a/_posts/2024-12-26-p1000.md
+++ b/_posts/2024-12-26-p1000.md
@@ -4,7 +4,7 @@ title: "P1000 超级玛丽游戏"
 author: "ZJM"
 categories: code
 tags: [Code]
-image: code-cover-3.jpg
+image: code-cover-3.png
 ---
 ```cpp
 #include<bits/stdc++.h>
