Your commit message

--- a/_posts/2024-12-26-1-B2002 Hello,World!.md
+++ b/_posts/2024-12-26-1-B2002 Hello,World!.md
@@ -2,7 +2,7 @@
 layout: post
 title: "B2002 Hello,World!"
 author: "ZJM"
-categories: code
+categories: code/sequential-structure
 tags: [Code]
 image: code-cover-1.png
 ---
