--- a/_posts/2024-12-26-1-B2025 输出字符菱形.md
+++ b/_posts/2024-12-26-1-B2025 输出字符菱形.md
@@ -2,7 +2,7 @@
 layout: post
 title: "B2025 输出字符菱形"
 author: "ZJM"
-categories: code
+categories: code/sequential-structure
 tags: [Code]
 image: code-cover-2.png
 ---
