--- a/_posts/2024-12-26-1-P1000 超级玛丽游戏.md
+++ b/_posts/2024-12-26-1-P1000 超级玛丽游戏.md
@@ -2,7 +2,7 @@
 layout: post
 title: "P1000 超级玛丽游戏"
 author: "ZJM"
-categories: code
+categories: code/sequential-structure
 tags: [Code]
 image: code-cover-3.png
 ---
