--- a/_posts/2024-12-26-1-P1001 A+B Problem.md
+++ b/_posts/2024-12-26-1-P1001 A+B Problem.md
@@ -2,7 +2,7 @@
 layout: post
 title: "P1001 A+B Problem"
 author: "ZJM"
-categories: code
+categories: code/sequential-structure
 tags: [Code]
 image: code-cover-1.png
 ---
