Your commit message

--- a/_posts/2024-12-26-1-B2029 大象喝水.md
+++ b/_posts/2024-12-26-1-B2029 大象喝水.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "B2005 字符三角形"
+title: "B2029 大象喝水"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-5.png
+image: code-cover-12.png
 ---
 ```cpp
 #include<bits/stdc++.h>
@@ -22,11 +22,14 @@ inline int read()
 }
 int main()
 {
-    char n;
-    cin>>n;
-    cout<<"  "<<n<<"  "<<endl;
-    cout<<" "<<n<<n<<n<<" "<<endl;
-    cout<<n<<n<<n<<n<<n<<endl;
+    int h,r;
+    h=read();
+    r=read();
+    double v,ans;
+    v=3.14*r*r*h;
+    ans=20000/v;
+    ans=int(ans)+1;
+    cout<<ans;
     return 0;
 }
 ```
