--- a/_posts/2024-12-26-1-P1425 小鱼的游泳时间.md
+++ b/_posts/2024-12-26-1-P1425 小鱼的游泳时间.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "P1001 A+B Problem"
+title: "P1425 小鱼的游泳时间"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-4.png
+image: code-cover-13.png
 ---
 ```cpp
 #include<bits/stdc++.h>
