--- a/_posts/2024-12-26-1-P5703 【深基2.例5】苹果采购.md
+++ b/_posts/2024-12-26-1-P5703 【深基2.例5】苹果采购.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "B2005 字符三角形"
+title: "P5703 【深基2.例5】苹果采购"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-5.png
+image: code-cover-6.png
 ---
 ```cpp
 #include<bits/stdc++.h>
@@ -22,11 +22,10 @@ inline int read()
 }
 int main()
 {
-    char n;
-    cin>>n;
-    cout<<"  "<<n<<"  "<<endl;
-    cout<<" "<<n<<n<<n<<" "<<endl;
-    cout<<n<<n<<n<<n<<n<<endl;
+    int n,m;
+    n=read(),m=read();
+    int ans=n*m;
+    printf("%d",ans);
     return 0;
 }
 ```
