--- a/_posts/2024-12-26-1-P5704 【深基2.例6】字母转换.md
+++ b/_posts/2024-12-26-1-P5704 【深基2.例6】字母转换.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "B2005 字符三角形"
+title: "P5704 【深基2.例6】字母转换"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-5.png
+image: code-cover-7.png
 ---
 ```cpp
 #include<bits/stdc++.h>
@@ -22,11 +22,10 @@ inline int read()
 }
 int main()
 {
-    char n;
-    cin>>n;
-    cout<<"  "<<n<<"  "<<endl;
-    cout<<" "<<n<<n<<n<<" "<<endl;
-    cout<<n<<n<<n<<n<<n<<endl;
+    char n,ans;
+    scanf("%c",&n);
+    ans=char((int)n-32);
+    printf("%c",ans);
     return 0;
 }
 ```
