--- a/_posts/2024-12-26-1-P5705 【深基2.例7】数字反转.md
+++ b/_posts/2024-12-26-1-P5705 【深基2.例7】数字反转.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "B2005 字符三角形"
+title: "P5705 【深基2.例7】数字反转"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-5.png
+image: code-cover-8.png
 ---
 ```cpp
 #include<bits/stdc++.h>
@@ -22,11 +22,13 @@ inline int read()
 }
 int main()
 {
-    char n;
+    string n;
     cin>>n;
-    cout<<"  "<<n<<"  "<<endl;
-    cout<<" "<<n<<n<<n<<" "<<endl;
-    cout<<n<<n<<n<<n<<n<<endl;
+    int len=n.length();
+    For(i,1,len)
+    {
+        cout<<n[len-i];
+    }
     return 0;
 }
 ```
