--- a/_posts/2024-12-26-1-P5708 【深基2.习2】三角形面积.md
+++ b/_posts/2024-12-26-1-P5708 【深基2.习2】三角形面积.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "B2005 字符三角形"
+title: "P5708 【深基2.习2】三角形面积"
 author: "ZJM"
 categories: code/sequential-structure
 tags: [Code]
-image: code-cover-5.png
+image: code-cover-10.png
 ---
 ```cpp
 #include<bits/stdc++.h>
@@ -22,11 +22,11 @@ inline int read()
 }
 int main()
 {
-    char n;
-    cin>>n;
-    cout<<"  "<<n<<"  "<<endl;
-    cout<<" "<<n<<n<<n<<" "<<endl;
-    cout<<n<<n<<n<<n<<n<<endl;
+    double a,b,c,p,ans;
+    cin>>a>>b>>c;
+    p=(a+b+c)/2;
+    ans=sqrt(p*(p-a)*(p-b)*(p-c));
+    cout<<setprecision(1)<<fixed<<ans;
     return 0;
 }
 ```
