Your commit message

--- a/_posts/Code/Luogu/Branch Structure/2024-12-26-P1055 [NOIP2008 普及组] ISBN 号码.md
+++ b/_posts/Code/Luogu/Branch Structure/2024-12-26-P1055 [NOIP2008 普及组] ISBN 号码.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "P1046 [NOIP2005 普及组] 陶陶摘苹果"
+title: "P1055 [NOIP2008 普及组] ISBN 号码"
 author: "ZJM"
 categories: code/luogu/branch-structure
 tags: [Code]
-image: code-cover-3.png
+image: code-cover-1.png
 ---
 ```cpp
 #include<iostream>
