--- a/_posts/Internship/2024-12-28-【外部对标案例】思研.md
+++ b/_posts/Internship/2024-12-28-【外部对标案例】思研.md
@@ -2,8 +2,7 @@
 layout: post
 title: "【外部对标案例】思研（2024年9月5日更新）"
 author: "沈亮"
-draft: true
-categories: internship
+categories: internship/confidential
 tags: [internship]
 image: internship-cover-3.png
 
